--- a/def/src/main/webapp/app/entities/def-item/def-item.component.html
+++ b/def/src/main/webapp/app/entities/def-item/def-item.component.html
@@ -9,21 +9,14 @@
         </button>
     </h2>
     <jhi-alert></jhi-alert>
-    <div class="row">
-        <div class="col-sm-12">
-            <form name="searchForm" class="form-inline">
-                <div class="input-group w-100 mt-3">
-                    <input type="text" class="form-control" [(ngModel)]="currentSearch" id="currentSearch" name="currentSearch" placeholder="Query">
-                    <button class="input-group-append btn btn-info" (click)="search(currentSearch)">
-                        <span class="fa fa-search"></span>
-                    </button>
-                    <button class="input-group-append btn btn-danger" (click)="clear()" *ngIf="currentSearch">
-                        <span class="fa fa-trash-o"></span>
-                    </button>
-                </div>
-            </form>
-        </div>
+    <div class="form-group">
+        <label class="form-control-label" for="field_def_type">Dosya</label>
+        <select class="form-control" id="field_def_type" name="def_type" [(ngModel)]="comboSelModel.comboSel" (change)="onChange($event)">
+            <option [ngValue]="null"></option>
+            <option [ngValue]="selectedOption" *ngFor="let selectedOption of comboSelModel.comboList; trackBy: trackDosyaById">{{selectedOption.code}}</option>
+        </select>
     </div>
+
     <br/>
     <div class="table-responsive" *ngIf="defItems">
         <table class="table table-striped">
