--- a/definition/src/main/webapp/app/entities/def-type/def-type.component.html
+++ b/definition/src/main/webapp/app/entities/def-type/def-type.component.html
@@ -25,6 +25,7 @@
         </div>
     </div>
     <br/>
+
     <div class="table-responsive" *ngIf="defTypes">
         <table class="table table-striped">
             <thead>
@@ -70,4 +71,22 @@
             </tbody>
         </table>
     </div>
+
+    <p-table [value]="defTypes" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true">
+        <ng-template pTemplate="header">
+            <tr>
+                <th>ID</th>
+                <th>Code</th>
+                <th>Name</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-tdata>
+            <tr>
+                <td>{{tdata.id}}</td>
+                <td>{{tdata.code}}</td>
+                <td>{{tdata.name}}</td>
+            </tr>
+        </ng-template>
+    </p-table>
+
 </div>
