--- a/definition/src/main/webapp/app/entities/per-person/per-person-detail.component.html
+++ b/definition/src/main/webapp/app/entities/per-person/per-person-detail.component.html
@@ -16,6 +16,10 @@
         <dd>
             <span>{{perPerson.isActive}}</span>
         </dd>
+        <dt><span>Sozlesme</span></dt>
+        <dd>
+            <span>{{perPerson.sozlesme}}</span>
+        </dd>
         <dt><span>Email</span></dt>
         <dd>
             <span>{{perPerson.email}}</span>
