--- a/definition/src/main/webapp/app/entities/per-person/per-person.component.html
+++ b/definition/src/main/webapp/app/entities/per-person/per-person.component.html
@@ -33,6 +33,7 @@
             <th><span>Code</span></th>
             <th><span>Name</span></th>
             <th><span>Is Active</span></th>
+            <th><span>Sozlesme</span></th>
             <th><span>Email</span></th>
             <th><span>Phone</span></th>
             <th><span>Cins</span></th>
@@ -54,6 +55,7 @@
                 <td>{{perPerson.code}}</td>
                 <td>{{perPerson.name}}</td>
                 <td>{{perPerson.isActive}}</td>
+                <td>{{perPerson.sozlesme}}</td>
                 <td>{{perPerson.email}}</td>
                 <td>{{perPerson.phone}}</td>
                 <td>{{perPerson.cins}}</td>
