--- a/definition/src/main/webapp/app/entities/per-plan/per-plan-detail.component.html
+++ b/definition/src/main/webapp/app/entities/per-plan/per-plan-detail.component.html
@@ -16,9 +16,9 @@
         <dd>
             <span>{{perPlan.dersGrup}}</span>
         </dd>
-        <dt><span>Ders No</span></dt>
+        <dt><span>Ders Sira</span></dt>
         <dd>
-            <span>{{perPlan.dersNo}}</span>
+            <span>{{perPlan.dersSira}}</span>
         </dd>
         <dt><span>Ders Adet</span></dt>
         <dd>
