--- a/definition/src/main/webapp/app/entities/per-plan/per-plan.component.html
+++ b/definition/src/main/webapp/app/entities/per-plan/per-plan.component.html
@@ -33,7 +33,7 @@
             <th><span>Start Date</span></th>
             <th><span>Day No</span></th>
             <th><span>Ders Grup</span></th>
-            <th><span>Ders No</span></th>
+            <th><span>Ders Sira</span></th>
             <th><span>Ders Adet</span></th>
             <th><span>Person</span></th>
             <th><span>Ders</span></th>
@@ -46,7 +46,7 @@
                 <td>{{perPlan.startDate | date:'mediumDate'}}</td>
                 <td>{{perPlan.dayNo}}</td>
                 <td>{{perPlan.dersGrup}}</td>
-                <td>{{perPlan.dersNo}}</td>
+                <td>{{perPlan.dersSira}}</td>
                 <td>{{perPlan.dersAdet}}</td>
                 <td>
                     <div *ngIf="perPlan.person">
